--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ main {
     background: url(images/placeholder.png) no-repeat;
     width: 895px;
     height: 385px;
-    background-size: contain;
+    background-size: contain !important;;
     margin: 0 auto;
 }
 
@@ -32,7 +32,7 @@ main {
 }
 
 #good ul li {
-    margin: 0 10px 0 0;
+    margin: 0 25px 0 0;
     display: inline;
     border: 10px solid transparent;
     border-image: url(images/dash.png) 22;
