--- a/styles.css
+++ b/styles.css
@@ -126,13 +126,13 @@ div#scoreboard {
 
 @media screen and (max-width:800px) {
     #wrapper {
-        width: 70%;
-        height: 70%;
+       /* width: 70%;*/
+        /*height: 70%;*/
     }
 
     main {
-        width: 70%;
-        height: 70%;
+        /*width: 70%;*/
+        /*height: 70%;*/
     }
 
 }
