--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,15 @@ div#scoreboard {
         /*height: 70%;*/
     }
 
+    footer {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+
+    #words {
+        width: 90vw;
+    }
 }
 
 @media screen and (max-width:560px) {}
