--- a/styles.css
+++ b/styles.css
@@ -126,13 +126,22 @@ div#scoreboard {
 
 @media screen and (max-width:800px) {
     #wrapper {
-       /* width: 70%;*/
-        /*height: 70%;*/
+        width: 70%;
+        height: 25%;
     }
 
     main {
-        /*width: 70%;*/
-        /*height: 70%;*/
+        width: 70%;
+
+    }
+
+    footer {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+    }
+    #words {
+        width: 80vw;
     }
 
 }
