--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,13 @@ div#scoreboard {
 
     }
 
+    main::after {
+        content: "Not optimized for mobile (switch for a desktop)";
+        margin: 0 auto;
+        color: #fff;
+        font-weight: bold;
+    }
+
     footer {
         display: flex;
         flex-direction: column-reverse;
@@ -143,6 +150,7 @@ div#scoreboard {
     #words {
         width: 80vw;
     }
+
 
 }
 
