--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,14 @@ header {
     display: block;
 }
 #wrapper {
-    background: url(images/bg.png) no-repeat;
+    background: #88abe4;
+    /*background: url(images/bg.png) no-repeat;*/
     width: 895px;
-    height:auto;
+    border-radius: 15px;
+    height: auto;
     background-size: contain !important;
     margin: 0 auto;
+    margin-bottom: 15px;
 }
 main {
     width: 895px;
@@ -51,6 +54,10 @@ div#question {
     font-weight: bold;
     text-transform: uppercase;
     padding-bottom: 10px;
+}
+
+#good ul {
+    padding-left: 0;
 }
 
 #good ul li {
@@ -126,13 +133,14 @@ div#scoreboard {
 
 @media screen and (max-width:800px) {
     #wrapper {
-       /* width: 70%;*/
-        /*height: 70%;*/
+        width: 80%;
+        height: 70%;
     }
 
     main {
-        /*width: 70%;*/
-        /*height: 70%;*/
+        position: relative;
+        width: 100%;
+        height: 100%;
     }
 
     footer {
