--- a/styles.css
+++ b/styles.css
@@ -94,11 +94,12 @@ div#question {
 .start_game {
     position: absolute;
     width: 50vw;
-    height: 50vh;
-    background: #000;
+    height: 200px;
+    background: rgba(81, 84, 86, 0.74);
+    border-radius: 5px;
     z-index: 1;
-    top: 25%;
-    left: 25%;
+    top: 20%;
+    left: 20%;
 }
 
 section#scorewrap {
@@ -107,7 +108,17 @@ section#scorewrap {
     justify-content: center;
     align-items: center;
 }
-
+#start_btn {
+    position: relative;
+    left: 25%;
+    right: 25%;
+    top: 45%;
+    border: none;
+    background: #3d4046;
+    border-radius: 4px;
+    height: 30px;
+    color: #72aee9;
+}
 div#scoreboard {
     height: 100px;
     width: 150px;
