--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,7 @@ div#question {
     background: rgba(81, 84, 86, 0.74);
     border-radius: 5px;
     z-index: 1;
+    box-shadow: 0 0 46px #000;
 }
 
 
